stopped overlap of back button

--- a/front-end/src/app/recipes/recipes.component.css
+++ b/front-end/src/app/recipes/recipes.component.css
@@ -27,7 +27,7 @@
 
 h1 {
   text-align: center;
-  margin: 0;
+  margin: 10px;
 }
 
 .list-container {
